--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webscraper",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "web.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,9 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
+    "mongoose": "^5.2.3",
     "request": "^2.87.0",
+    "system-sleep": "^1.3.6",
     "wanakana": "^4.0.1"
   }
 }
