--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webscraper",
   "version": "1.0.0",
   "description": "",
-  "main": "web.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "discord.js": "^11.3.2",
     "express": "^4.16.3",
     "mongoose": "^5.2.3",
     "request": "^2.87.0",
