--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.3",
     "request": "^2.87.0",
+    "request-promise-native": "^1.0.5",
     "system-sleep": "^1.3.6",
     "wanakana": "^4.0.1"
   }
