--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3.2",
     "express": "^4.16.3",
+    "imgur-v2": "^0.2.1",
     "mongoose": "^5.2.3",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
