--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "discord.js": "^11.3.2",
     "express": "^4.16.3",
     "imgur-v2": "^0.2.1",
+    "jimp": "^0.2.28",
     "mongoose": "^5.2.3",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
+    "seedrandom": "^2.4.3",
     "system-sleep": "^1.3.6",
     "wanakana": "^4.0.1"
   }
